@@ -3,6 +3,7 @@
     * Need SPVM 0.9657+.
   [Bug Fix]
     * Fixed the bug that FreeBSD can't find WNOHANG symbol adding sys/types.h header.
+    * Fixed the bug that FreeBSD that major version is less than 13 doesn't support clock_nanosleep.
 0.15 2022-10-21
   [Bug Fix]
     * Fixed the bug that FreeBSD can't compile SPVM::Sys for the following error.
